feat: 결과 출력 메서드 구현