@@ -6,41 +6,51 @@ import java.io.InputStreamReader;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 import static leets.leets_mate.Constants.*;
 
 public class LeetsMateApplication {
-    static BufferedReader br;
+    static BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
     static List<String> parsedMembers;
     static int groupSize;
 
     // 동작 함수입니다.
     public void run() throws IOException {
-        br = new BufferedReader(new InputStreamReader(System.in));
-        System.out.println(INTRO.getMessage());
-        System.out.print(NEWLINE.getMessage());
-        System.out.println(INPUT.getMessage());
+        printIntro();
 
         String members = br.readLine();
         try {
             checkHasNoEnglish(members);
         } catch (Exception e) {
-            System.out.println(ERROR_INPUT.getMessage());
+            System.out.println(ERROR_MEMBER_INPUT.getMessage());
             run();
         }
 
         parsedMembers = parseMembers(members);
         groupSize = getGroupSize();
         List<List<String>> finalMembers = generateRandomGroups(parsedMembers, groupSize);
+
+        printResult(finalMembers);
+        System.out.println(HELLO.getMessage());
+    }
+
+    private static void printIntro() {
+        System.out.println(INTRO.getMessage());
+        System.out.print(NEWLINE.getMessage());
+        System.out.println(INPUT.getMessage());
     }
 
     private int getGroupSize() throws IOException {
-        int size = checkGroupSize();
+        System.out.print(NEWLINE.getMessage());
+        System.out.println(MATE.getMessage());
+
+        int size = checkGroupSize(); //짝 수
 
         try {
             checkDataValidity(memberNumber(parsedMembers), size);
         } catch (Exception e) {
-            System.out.println(ERROR_INPUT.getMessage());
+            System.out.println(ERROR_MAXSIZE.getMessage());
             getGroupSize();
         }
         return size;
@@ -62,7 +72,7 @@ public class LeetsMateApplication {
     // 문자열로된 멤버들을 리스트로 분리하는 함수입니다.
     public List<String> parseMembers(String members) {
         String[] arr = members.split(",");
-        return Arrays.stream(arr).toList();
+        return Arrays.stream(arr).collect(Collectors.toList());
     }
 
     // 총 멤버수를 반환합니다.
@@ -83,7 +93,7 @@ public class LeetsMateApplication {
 
     // 멤버수와 최대 짝수 데이터가 유효한지 검사하는 함수입니다. 유효하지 않다면 예외 출력
     public void checkDataValidity(int memberCount, int maximumGroupSize) {
-        if (memberCount > maximumGroupSize) {
+        if (memberCount < maximumGroupSize) {
             throw new IllegalArgumentException();
         }
     }
@@ -103,6 +113,21 @@ public class LeetsMateApplication {
 
     // 결과를 프린트 하는 함수입니다.
     public void printResult(List<List<String>> result) {
+        StringBuilder sb = new StringBuilder();
+        System.out.print(NEWLINE.getMessage());
+        System.out.println(RESULT.getMessage());
+
+        for (List<String> group : result) {
+            sb.append("[ ");
+            for (int i = 0; i < group.size(); i++) {
+                sb.append(group.get(i));
+                if (i != group.size() - 1) {
+                    sb.append(" | ");
+                }
+            }
+            sb.append(" ]").append("\n");
+        }
+        System.out.println(sb);
     }
 
     public static void main(String[] args) throws IOException {
